# ocr-pdf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omo/plans/: ocr-pdf-architecture.md
.opencode/: agents.json  mcp.json
app/: layout.tsx  page.tsx
app/api/convert/: route.ts
app/api/ocr/: route.ts
app/api/ocr/batch/: route.ts
app/api/ocr/process/: route.ts
app/api/upload/: route.ts
cli/: main.py
components/: download-manager.tsx  file-upload.tsx  ocr-dashboard.tsx  ocr-results.tsx  pdf-uploader.tsx
core/: __init__.py  batch.py  config.py  obsidian.py  quality.py  router.py
core/converters/: __init__.py  md_to_pdf.py  pdf_to_md.py
core/extractors/: __init__.py  ocrmypdf_extractor.py  pymupdf_extractor.py  tesseract_extractor.py
lib/: ocr-client.ts
mcp_server/: server.py
opencode-skill/: SKILL.md
server/: .env.example  index.js  package.json
sidecar/: ocr-pdf-server.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: PDFViewer.tsx  ProcessingStatus.tsx  ResultsPanel.tsx  UploadZone.tsx
src/components/auth/: ClerkAuthWrapper.tsx
src/lib/: documentProcessor.ts  pdfProcessor.ts
src/pages/: Index.tsx
tests/: __init__.py  conftest.py  test_batch.py  test_config.py  test_converters.py  test_quality.py  test_router.py
